--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "2.5.0",
+    "react-native-maps": "^1.7.1",
+    "react-native-picker-select": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-snap-carousel": "https://github.com/ram33z/react-native-snap-carousel",
